# NS_utils

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
Setup/: ns-packages.txt  requirements.txt  setup-env.ps1
ns_styles/: __init__.py  example.ipynb  mpl_style.py
py_utils/: __init__.py  nb_html_export.py  nb_html_slide_export.py  snowflake_sql.py  utils.py
snee_styles/: example.ipynb
