[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NS_utils"
version = "0.1.5"
authors = [{name = "Ibrahim Khan"}]
description = "Common Python utility functions and NS ICS styling"
dependencies = [
    "pyodbc>=5.1.0",
    "pandas>=2.3.3",
    "matplotlib>=3.9.2",
    "plotly>=5.0",
    "snowflake-connector-python>=2.0",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
]

[project.urls]
Homepage = "https://github.com/Norfolk-Suffolk-ICS/NS_utils"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ns_styles = ["styles/*.mplstyle", "styles/*.json"]